--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MovieCatalog</string>
-    <string name="popular_now">Popular Now</string>
+    <string name="popular_movie">Popular Movie</string>
     <string name="movie">Movie</string>
     <string name="tv_show">Tv Show</string>
     <string name="latest_movie">Latest Movie</string>
