--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="tv_show">Tv Show</string>
     <string name="latest_movie">Latest Movie</string>
     <string name="trending_now">Trending Now</string>
+    <string name="top_rate_tvshow">Top Rate Tv Show</string>
+    <string name="latest_tvshow">Latest Tv Show</string>
+    <string name="image_banner">image banner</string>
+    <string name="genre_year">%s, %s</string>
 </resources>
